[package]
name = "chunked_vec"
version = "0.3.3"
edition = "2021"
authors = ["XuancongMeng <xuancongmeng@gmail.com>"]
description = "A vector-like data structure that stores elements in fixed-size chunks for better memory management"
license = "MIT"
repository = "https://github.com/QuarkPixel/ChunkedVec"
keywords = ["vector", "data-structure", "chunk"]
categories = ["data-structures"]

[dependencies]
