[package]
name = "chunked_vec"
version = "0.4.0"
edition = "2021"
authors = ["XuancongMeng <xuancongmeng@gmail.com>"]
description = "A vector-like data structure that stores elements in fixed-size chunks for better memory management"
license = "MIT"
repository = "https://github.com/QuarkPixel/ChunkedVec"
keywords = ["vector", "data-structure", "chunk"]
categories = ["data-structures"]

[dependencies]
likely_stable = "0.1.3"
serde = { version = "1.0.228", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
serde_json = { version = "1.0.105", default-features = false, features = ["alloc", "std"] }

[features]
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
